PROJECT(PARSER)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_COMPILE_OPTIONS(-g)
ADD_COMPILE_OPTIONS(-march=native)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

FIND_LIBRARY(PCAP pcap REQUIRED)
FIND_LIBRARY(PTHREAD pthread REQUIRED)

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_EXECUTABLE(parser main.cpp)
TARGET_LINK_LIBRARIES(parser ${PTHREAD} ${PCAP} c_src_lib cxx_src_lib)


INSTALL(TARGETS
            parser
        DESTINATION bin)
